kubernetes/infrastructure/controllers/networking/traefik/dashboard/dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik.${SECRET_DOMAIN}`)"
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
